--- a/html/NotXhamster.html
+++ b/html/NotXhamster.html
@@ -11,9 +11,11 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="../css/adaptation.css">
 	<title>NotXhamster</title>
+
 </head>
 	<body>
-	<div class="block"></div>
-		Хомяки не хомяки
+	<h1 align="center">Хомяки</h1>
+		<p>К семейству хомяков относятся небольшие, плотно сложенные грызуны с короткими конечностями, маленькими ушами и короткими хвостами. Длина тела варьируется от 5 до 34 см, хвоста от 0,7 до 10 см. Самки у некоторых видов крупнее самцов.<p>Окраска густого меха на спине от пепельно- или буровато-серой до тёмной коричнево-охристой; на животе — чёрная, белая или серая. Иногда вдоль спины проходит чёрная полоса. Имеются очень развитые защёчные мешки.
 	</body>
+
 </html>
